Se cambio el nombre del autor

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     \cf5 <\cf6 meta\cf5  \cf7 charset\cf5 =\cf8 "UTF-8"\cf5 >\cf2 \
     \cf5 <\cf6 meta\cf5  \cf7 name\cf5 =\cf8 "description"\cf5  \cf7 content\cf5 =\cf8 "Free Web tutorials"\cf5 >\cf2 \
     \cf5 <\cf6 meta\cf5  \cf7 name\cf5 =\cf8 "keywords"\cf5  \cf7 content\cf5 =\cf8 "HTML,CSS,XML,JavaScript"\cf5 >\cf2 \
-    \cf5 <\cf6 meta\cf5  \cf7 name\cf5 =\cf8 "author"\cf5  \cf7 content\cf5 =\cf8 "John Doe"\cf5 >\cf2 \
+    \cf5 <\cf6 meta\cf5  \cf7 name\cf5 =\cf8 "author"\cf5  \cf7 content\cf5 =\cf8 "Augusto Krause"\cf5 >\cf2 \
     \cf5 <\cf6 meta\cf5  \cf7 name\cf5 =\cf8 "viewport"\cf5  \cf7 content\cf5 =\cf8 "width=device-width, initial-scale=1.0"\cf5 >\cf2 \
 \cf5 </\cf6 head\cf5 >\cf2 \
 \cf5 <\cf6 body\cf5 >\cf2 \
